fixed vertical width scroll popping up. vw evidently includes the size of the vertical scrollbar as well. So max-width of 100% should do the trick.

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,5 +8,6 @@ body {
 .main {
   background: $background;
   width: 100vw;
+  max-width: 100%;
   min-height: 100vh;
 }
